--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.bikal.generaltemplate.ui.activity.MainActivity">
+    tools:context="ru.example.techmas.androidteamplate.activity.MainActivity">
 
     <TextView
         android:id="@+id/tvHello"
