--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="activity_middle_margin">12dp</dimen>
     <dimen name="activity_small_margin">8dp</dimen>
     <dimen name="activity_very_small_margin">5dp</dimen>
+    <dimen name="activity_ultra_small_margin">3dp</dimen>
 </resources>
